# sql-decomposer

./: .gitignore  README.md  json_generator.py  payload.json  plan_decoder.py  plan_to_sql.py  pyproject.toml  run_lineage.py  spark_lineage  sql_plan_to_sql.py  start.py  submit.sh  te2.json  test_lineage_invariants.py  test_sql_vs_json_parity.py  verify_plan_to_sql.py
lineage_dot/: 004_00_setup_schema_04.lineage.dot  008_00_setup_schema_08.lineage.dot  009_00_setup_schema_09.lineage.dot  010_00_setup_schema_10.lineage.dot  011_00_setup_schema_11.lineage.dot  012_00_setup_schema_12.lineage.dot  014_01_seed_data_02.lineage.dot  015_01_seed_data_03.lineage.dot  016_01_seed_data_04.lineage.dot  017_01_seed_data_05.lineage.dot  018_01_seed_data_06.lineage.dot  020_02_select_basics_02.lineage.dot  021_02_select_basics_03.lineage.dot  022_02_select_basics_04.lineage.dot  024_03_joins_and_subqueries_02.lineage.dot  025_03_joins_and_subqueries_03.lineage.dot  028_03_joins_and_subqueries_06.lineage.dot  030_04_cte_and_aggregations_02.lineage.dot  031_04_cte_and_aggregations_03.lineage.dot  033_04_cte_and_aggregations_05.lineage.dot  035_05_window_functions_02.lineage.dot  036_05_window_functions_03.lineage.dot  038_06_complex_types_and_json_02.lineage.dot  039_06_complex_types_and_json_03.lineage.dot  040_06_complex_types_and_json_04.lineage.dot  041_06_complex_types_and_json_05.lineage.dot  043_07_datetime_and_intervals_02.lineage.dot  044_07_datetime_and_intervals_03.lineage.dot  045_07_datetime_and_intervals_04.lineage.dot  048_08_set_ops_views_cache_03.lineage.dot  (+4 more)
(+321 files in other folders)
